Fixed line 218 in order to remove the gap of specific section

--- a/css/index.css
+++ b/css/index.css
@@ -215,7 +215,6 @@ footer nav a {
     flex-wrap: wrap;
     margin-bottom: 10px;
     border-bottom: 1px dashed black;
-    height:880px;
 }
 
 .strategy{
